[project]
name = "wagtail-markdown"
description = "Markdown support for Wagtail"
authors = [{name = "Felicity Tarnell ", email = "hello@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "Markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: zlib/libpng License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=4.1",
    "Markdown>=3.3,<4",
    # note: bleach5 requires bleach[css]. Will make one of the next versions require >= 5
    "bleach>=3.3,<5",
]

[project.optional-dependencies]
testing = [
    "pre-commit>=3.3.0,<4",
    "tox>=4.6.4,<5",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtail-markdown"
Changelog = "https://github.com/torchbox/wagtail-markdown/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtailmarkdown"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
]

[tool.black]
target-version = ["py38"]

[tool.ruff]
target-version = "py38"

select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "PGH", # pygrep-hooks
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "W",   # pycodestyle warnings
    "YTT",   # flake8-2020
    "UP",  # pyupgrade
    "RUF100",  # unused noqa
]

ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src", "wagtailmarkdown"]
lines-between-types = 1
lines-after-imports = 2

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true
source = ["wagtailmarkdown"]

omit = ["**/migrations/*", "tests/*"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
skip_empty = true
skip_covered = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
