[project]
name = "wagtail-markdown"
description = "Markdown support for Wagtail"
authors = [{name = "Felicity Tarnell ", email = "hello@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "Markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: zlib/libpng License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]

dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "Wagtail>=5.2",
    "Markdown>=3.3,<4",
    # note: bleach5 requires bleach[css]. Will make one of the next versions require >= 5
    "bleach>=3.3,<5",
]

[project.optional-dependencies]
testing = [
    "tox>=4.6.4,<5",
    "coverage>=7.0,<8.0",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtail-markdown"
Changelog = "https://github.com/torchbox/wagtail-markdown/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtailmarkdown"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "ruff.toml",
    "CHANGELOG.md",
]
